--- a/config/environments/components/monitor.env
+++ b/config/environments/components/monitor.env
@@ -7,15 +7,15 @@ PORT=3333
 LOG_LEVEL=info
 RETRY=REFRESH
 RETRY_ATTEMPTS=5 
-CONNECTION=[{"WS_URL":"localhost:3331","AUTH_KEY":"${API_AUTH_KEY}","NAME":"local"},{"WS_URL":"emp-job-queue-production.up.railway.app","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production"}]
+CONNECTION=[{"WS_URL":"localhost:3331","AUTH_KEY":"${API_AUTH_KEY}","NAME":"local","is_ssl":false},{"WS_URL":"qredapi.emerge.pizza","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production","is_ssl":true}]
 
 [local]
 LOG_LEVEL=debug
 PORT=3333
 HOST=localhost
-CONNECTION=[{"WS_URL":"localhost:3331","AUTH_KEY":"${API_AUTH_KEY}","NAME":"local"},{"WS_URL":"emp-job-queue-production.up.railway.app","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production"}]
+CONNECTION=[{"WS_URL":"localhost:3331","AUTH_KEY":"${API_AUTH_KEY}","NAME":"local","is_ssl":false},{"WS_URL":"qredapi.emerge.pizza","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production","is_ssl":true}]
 
 [production]
 RETRY=AUTO
 RETRY_ATTEMPTS=UNLIMITED
-CONNECTION={"WS_URL":"qredapi.emerge.pizza","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production"}
+CONNECTION={"WS_URL":"qredapi.emerge.pizza","AUTH_KEY":"${API_AUTH_KEY}","NAME":"production","is_ssl":true}
