--- a/apps/machine/docker-compose.yml
+++ b/apps/machine/docker-compose.yml
@@ -46,7 +46,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:comfyui-remote
     platform: linux/amd64
-    container_name: comfyui-remote-${CURRENT_ENV}
+    container_name: comfyui-remote
     hostname: comfyui-remote
     profiles:
       - comfyui-remote
@@ -82,7 +82,7 @@ services:
         CLOUD_STORAGE_PROVIDER: ${CLOUD_STORAGE_PROVIDER}
     image: emprops/machine:openai
     platform: linux/amd64
-    container_name: openai-${CURRENT_ENV}
+    container_name: openai
     hostname: openai
     profiles:
       - openai
@@ -103,37 +103,6 @@ services:
           memory: ${MEMORY_LIMIT:-8G}
         reservations:
           memory: ${MEMORY_RESERVATION:-2G}
-    ports:
-      - ${EXPOSE_PORTS:-9090}:9090
-  simulation:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: simulation
-      args:
-        WORKER_SPEC: simulation:5
-        CACHE_BUST: ${CACHE_BUST:-1}
-    image: emprops/machine:simulation
-    platform: linux/amd64
-    container_name: simulation-${ENV:-local}
-    hostname: simulation
-    profiles:
-      - simulation
-    restart: 'no'
-    stop_grace_period: 2s
-    stop_signal: SIGTERM
-    env_file:
-      - .env.secret
-    environment:
-      WORKERS: simulation:5
-      MACHINE_ID: simulation
-    working_dir: /workspace
-    deploy:
-      resources:
-        limits:
-          memory: ${MEMORY_LIMIT:-8G}
-        reservations:
-          memory: ${MEMORY_RESERVATION:-2G}
   openai-text:
     build:
       context: .
@@ -144,7 +113,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:openai-text
     platform: linux/amd64
-    container_name: openai-text-${ENV:-local}
+    container_name: openai-text
     hostname: openai-text
     profiles:
       - openai-text
@@ -174,7 +143,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:sim
     platform: linux/amd64
-    container_name: sim-${ENV:-local}
+    container_name: sim
     hostname: sim
     profiles:
       - sim
@@ -205,7 +174,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:comfyui-remote-test
     platform: linux/amd64
-    container_name: comfyui-remote-test-${ENV:-local}
+    container_name: comfyui-remote-test
     hostname: comfyui-remote-test
     profiles:
       - comfyui-remote-test
@@ -238,7 +207,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:sim-local
     platform: linux/amd64
-    container_name: sim-local-${CURRENT_ENV}
+    container_name: sim-local
     hostname: sim-local
     profiles:
       - sim-local
@@ -283,7 +252,7 @@ services:
         CACHE_BUST: ${CACHE_BUST:-1}
     image: emprops/machine:comfyui-remote-local
     platform: linux/amd64
-    container_name: comfyui-remote-local-${CURRENT_ENV}
+    container_name: comfyui-remote-local
     hostname: comfyui-remote-local
     profiles:
       - comfyui-remote-local
@@ -306,27 +275,6 @@ services:
           memory: ${MEMORY_RESERVATION:-2G}
     ports:
       - ${EXPOSE_PORTS:-9090}:9090
-  openai-production:
-    <<: *base-machine
-    profiles:
-      - openai-production
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: base
-      args:
-        WORKER_SPEC: openai:5
-        WORKERS: openai:5
-        MACHINE_ID: openai-production
-        CACHE_BUST: ${CACHE_BUST:-1}
-        OPENAI_API_KEY: ${OPENAI_API_KEY}
-        OPENAI_IMAGE_MODEL: ${OPENAI_IMAGE_MODEL}
-        CLOUD_STORAGE_PROVIDER: ${CLOUD_STORAGE_PROVIDER}
-    container_name: openai-production-${CURRENT_ENV}
-    hostname: openai-production
-    ports:
-      - ${EXPOSE_PORTS:-9090}:9090
-    image: emprops/machine:openai-production
   openai-local:
     build:
       context: .
@@ -342,7 +290,7 @@ services:
         CLOUD_STORAGE_PROVIDER: ${CLOUD_STORAGE_PROVIDER}
     image: emprops/machine:openai-local
     platform: linux/amd64
-    container_name: openai-local-${CURRENT_ENV}
+    container_name: openai-local
     hostname: openai-local
     profiles:
       - openai-local
@@ -371,8 +319,8 @@ services:
       dockerfile: Dockerfile
       target: base
       args:
-        WORKER_SPEC: openai:5
-        WORKERS: openai:5
+        WORKER_SPEC: openai:1
+        WORKERS: openai:1
         MACHINE_ID: openai-local-prod
         CACHE_BUST: ${CACHE_BUST:-1}
         OPENAI_API_KEY: ${OPENAI_API_KEY}
@@ -380,7 +328,7 @@ services:
         CLOUD_STORAGE_PROVIDER: ${CLOUD_STORAGE_PROVIDER}
     image: emprops/machine:openai-local-prod
     platform: linux/amd64
-    container_name: openai-local-prod-${CURRENT_ENV}
+    container_name: openai-local-prod
     hostname: openai-local-prod
     profiles:
       - openai-local-prod
@@ -403,6 +351,60 @@ services:
           memory: ${MEMORY_RESERVATION:-2G}
     ports:
       - ${EXPOSE_PORTS:-9090}:9090
+  openai-production:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: base
+      args:
+        WORKER_SPEC: openai:5
+        WORKERS: openai:5
+        MACHINE_ID: openai-production
+        CACHE_BUST: ${CACHE_BUST:-1}
+        OPENAI_API_KEY: ${OPENAI_API_KEY}
+        OPENAI_IMAGE_MODEL: ${OPENAI_IMAGE_MODEL}
+        CLOUD_STORAGE_PROVIDER: ${CLOUD_STORAGE_PROVIDER}
+    image: emprops/machine:openai-production
+    platform: linux/amd64
+    container_name: openai-production
+    hostname: openai-production
+    profiles:
+      - openai-production
+    restart: 'no'
+    stop_grace_period: 2s
+    stop_signal: SIGTERM
+    env_file:
+      - .env.secret
+    environment:
+      NODE_ENV: production
+      ENV: ${CURRENT_ENV}
+      NVIDIA_VISIBLE_DEVICES: all
+      NVIDIA_DRIVER_CAPABILITIES: compute,utility
+    working_dir: /workspace
+    deploy:
+      resources:
+        limits:
+          memory: ${MEMORY_LIMIT:-8G}
+        reservations:
+          memory: ${MEMORY_RESERVATION:-2G}
+    ports:
+      - ${EXPOSE_PORTS:-9090}:9090
+  sim-local-dev:
+    <<: *base-machine
+    profiles:
+      - sim-local-dev
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: simulation
+      args:
+        WORKER_SPEC: simulation:10
+        WORKERS: simulation:10
+        MACHINE_ID: sim-local-dev
+        CACHE_BUST: ${CACHE_BUST:-1}
+    container_name: sim-local-dev
+    hostname: sim-local-dev
+    image: emprops/machine:sim-local-dev
 networks:
   default:
     name: emp-job-queue
