--- a/config/environments/components/comfyui.env
+++ b/config/environments/components/comfyui.env
@@ -19,7 +19,7 @@ REMOTE_USER=${REMOTE_COMFYUI_USERNAME}
 REMOTE_PASS=${REMOTE_COMFYUI_PASSWORD}
 REMOTE_TIMEOUT_SECONDS=15
 REMOTE_RESOURCE_BINDING=shared
-REMOTE_SECURE=true
+REMOTE_SECURE=false
 
 EXPOSE_PORTS=false
 RESOURCE_BINDING=gpu
