fixed shutdown bug

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dev:redis:stop": "pkill redis-server || echo '✅ Redis already stopped'",
     "dev:local-redis": "./scripts/dev-local-redis.sh",
     "dev:local-redis:stop": "brew services stop redis",
-    "shutdown": "./scripts/shutdown-all.sh",
+    "shutdown": "pnpm shutdown:container && ./scripts/shutdown-all.sh",
+    "shutdown:container": "./scripts/shutdown-docker.sh",
     "setup:developer": "pnpm install && pnpm dev:local-redis",
     "dev:all": "pnpm dev",
     "logs": "node scripts/log-viewer.js",
