--- a/config/environments/components/database.env
+++ b/config/environments/components/database.env
@@ -4,7 +4,7 @@ NAMESPACE=DATABASE
 [default]
 
 [development]
-URL=postgresql://postgres:npg_fuMwsrJiI7d0@ep-orange-boat-afkxlijp-pooler.c-2.us-west-2.aws.neon.tech/emprops-open-api-dev?sslmode=require&channel_binding=require&connection_limit=1000&pool_timeout=30&connect_timeout=60&statement_timeout=120000&idle_in_transaction_session_timeout=120000&pool_min_size=10&pool_max_lifetime=7200&pool_idle_timeout=600&application_name=emp-job-queue-monitor
+URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-dev?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emp-job-queue-monitor
 
 [production]
-URL=postgresql://postgres:npg_itkeV7shFg3S@ep-summer-night-adnh3xt0-pooler.c-2.us-east-1.aws.neon.tech/emprops-open-api?sslmode=require&channel_binding=require&connection_limit=1000&pool_timeout=30&connect_timeout=60&statement_timeout=120000&idle_in_transaction_session_timeout=120000&pool_min_size=10&pool_max_lifetime=7200&pool_idle_timeout=600&application_name=emp-job-queue-monitor
+URL=${DATABASE_BASE_URL}/emprops-open-api?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emp-job-queue-monitor
