feat(telemetry): complete Phase 2 API server integration with OTEL-compliant spans
This commit implements Phase 2 of the Redis Event Stream + Single Collector Container Architecture, adding comprehensive telemetry events to the API server for immediate debugging value.

## Key Features Added

### API Server Telemetry Integration
- WebSocket connection/disconnection tracking with client metadata
- Redis operation monitoring (HMSET, ZADD, XADD) with duration tracking
- Health check endpoint telemetry with uptime and component status
- Global error handlers for uncaught exceptions and unhandled rejections
- Job lifecycle tracking (creation, queuing, completion/failure events)

### OTEL-Compliant EventClient
- Generates proper OTEL spans with hierarchical relationships
- Supports both new span() methods and backward-compatible event() methods
- Includes resource attributes (service.name, service.version, deployment.environment)
- Semantic attribute naming with 'emp.' namespace for job/worker/machine correlation
- Fire-and-forget emission to prevent service performance impact

### Telemetry Collector Container
- Dedicated Redis stream consumer with consumer group persistence
- Console-based event processor with structured JSON output
- Dockerized collector service with environment-based configuration
- Health check endpoint for monitoring collector status
- Comprehensive test suite with OTEL span compatibility

### Enhanced Event Types
- WebSocket events: connection, disconnection, error
- Redis events: operation tracking, connection monitoring, error handling
- System events: health checks, service lifecycle, error occurrences
- Job events: submission, queuing, processing, completion/failure
- Worker events: registration, heartbeat, status changes

### Testing Infrastructure
- 15+ comprehensive tests covering OTEL span generation, hierarchical relationships
- Redis stream integration tests with consumer group persistence
- End-to-end event flow tests with job lifecycle 

--- a/config/environments/components/telemetry.env
+++ b/config/environments/components/telemetry.env
@@ -16,15 +16,24 @@ OTEL_COLLECTOR_TRACES_ENDPOINT=http://localhost:4318/v1/traces
 OTEL_COLLECTOR_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
 OTEL_SERVICE_NAME=emp-service
 OTEL_SERVICE_VERSION=1.0.0
-FLUENTD_SECURE=false
+
+# Collector
+STREAM_KEY=telemetry:events
+CONSUMER_GROUP=telemetry-collectors
+CONSUMER_NAME=collector-1
+BATCH_SIZE=10
+BLOCK_TIME=5000
+
+OUTPUT_FORMAT=console  # console | otel | both
+PROCESSOR_BATCH_SIZE=50
+FLUSH_INTERVAL=10000
+
+STATS_INTERVAL=60000
 
 [development]
 DASH0_DATASET=development
-FLUENTD_HOST=host.docker.internal
-FLUENTD_PORT=24224
 
 [production]
 DASH0_DATASET=production
-FLUENTD_HOST=shortline.proxy.rlwy.net
-FLUENTD_PORT=19571
-FLUENTD_SECURE=false
+
+
