--- a/package.json
+++ b/package.json
@@ -109,10 +109,19 @@
     "ngrok:api": "ngrok start api",
     "ngrok:emprops": "ngrok start emprops",
     "ngrok:redis": "ngrok start redis",
-    "d:all:build": "pnpm d:api:build && pnpm d:webhook:build",
-    "d:all:build:nocache": "pnpm d:api:build:nocache && pnpm d:webhook:build:nocache",
-    "d:all:build:push": "pnpm d:api:build:push && pnpm d:webhook:build:push",
-    "d:all:build:push:nocache": "pnpm d:api:build:push:nocache && pnpm d:webhook:build:push:nocache",
+    "d:all:build": "pnpm d:api:build && pnpm d:webhook:build && pnpm d:telcollect:build",
+    "d:all:build:nocache": "pnpm d:api:build:nocache && pnpm d:webhook:build:nocache && pnpm d:telcollect:build:nocache",
+    "d:all:build:push": "pnpm d:api:build:push && pnpm d:webhook:build:push && pnpm d:telcollect:build:push",
+    "d:all:build:push:nocache": "pnpm d:api:build:push:nocache && pnpm d:webhook:build:push:nocache && pnpm d:telcollect:build:push:nocache",
+    "d:telcollect:build": "pnpm check:core && cd apps/telemetry-collector && node prepare-docker-build.js && docker build --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/telemetry-collector:latest .",
+    "d:telcollect:build:nocache": "pnpm check:core && cd apps/telemetry-collector && node prepare-docker-build.js && docker build --no-cache --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/telemetry-collector:latest .",
+    "d:telcollect:push": "docker push emprops/telemetry-collector:latest",
+    "d:telcollect:build:push": "pnpm d:telcollect:build && pnpm d:telcollect:push",
+    "d:telcollect:build:push:nocache": "pnpm d:telcollect:build:nocache && pnpm d:telcollect:push",
+    "d:telcollect:pull": "docker pull emprops/telemetry-collector:latest",
+    "d:telcollect:run": "./scripts/run-telcollect-docker.sh",
+    "d:telcollect:pull:run": "pnpm d:telcollect:pull && pnpm d:telcollect:run",
+    "d:telcollect:status": "curl -s http://localhost:9090/health | jq || echo '❌ Telemetry Collector health check failed'",
     "dev:jeval": "cd services/job-evaluator && tsx --env-file=.env.secret.local-dev --env-file=.env.local-dev src/index.ts",
     "dev:jresolve": "cd services/job-evaluator && tsx --env-file=.env.secret.local-dev --env-file=.env.local-dev src/resolver.ts",
     "dash:dev:restart": "node scripts/terminal/restart-service.js",
