Revert "fix(build): resolve Vercel deployment Prisma client generation issues"
This reverts commit d4cdfeddfb05f9af7c73b0c9b5b44f13fead3806.

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "build/**", "src/.vitepress/dist/**"],
-      "env": ["NODE_ENV", "CURRENT_ENV", "SKIP_TYPE_CHECK", "DATABASE_URL"]
+      "env": ["NODE_ENV", "CURRENT_ENV", "SKIP_TYPE_CHECK"]
     },
     "test": {
       "dependsOn": ["build"],
