--- a/apps/monitor/package.json
+++ b/apps/monitor/package.json
@@ -5,8 +5,8 @@
   "packageManager": "pnpm@10.12.4",
   "scripts": {
     "dev": "mkdir -p ../../logs && (echo '   - Logs:         pnpm logs:monitor' && echo '   - All Logs:     pnpm logs:all' && echo && next dev -p 3333) 2>&1 | tee ../../logs/monitor.log",
-    "prebuild": "if [ \"$VERCEL\" = \"1\" ]; then (cat .env.production; echo; cat .env.secret.production) > .env.local; else (cat .env.local-dev; echo; cat .env.secret.local-dev) > .env.local; fi && cd ../../packages/database && pnpm prisma generate",
-    "build": "next build",
+    "prebuild": "printf 'NODE_ENV=production\\nDATABASE_URL=postgresql://build:build@localhost:5432/build\\nREDIS_URL=redis://localhost:6379\\nHUB_REDIS_URL=redis://localhost:6379\\n' > .env.local",
+    "build": "cd ../../packages/database && pnpm prisma generate && cd ../../apps/monitor && next build",
     "start": "next start -p 3333",
     "lint": "next lint",
     "test": "vitest",
