feat: implement pre-built database deployment strategy
- Add Husky pre-push hook to run pnpm build:prod locally
- Update vercel.json to only build monitor app (no database compilation)
- Allow packages/database/dist/ in git for Vercel deployment
- Database package pre-compiled locally and committed to repository
- Eliminates Prisma generation failures in Vercel environment

🎯 Complete solution: Local compilation + Husky validation + Vercel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ bundled/
 */worker-bundled/
 *.tsbuildinfo
 
+# Exception: Allow database package dist (needed for Vercel deployment)
+!packages/database/dist/
+
 # Build metadata (generated during build)
 **/build-metadata.json
 build-metadata.json
