fix: update Docker builds to use standardized production builds
- Update d:api:build and d:webhook:build to use pnpm build:prod
- Fix Husky pre-push hook deprecation warning
- Standardize production build process across all deployment targets
- Ensure consistent pre-compiled database package for all builds

🎯 All deployment targets (Vercel, Docker, Local) now use same build process

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "dev:all:stop": "./scripts/stop-all.sh",
     "dev:all:logs:watch": "tail -f logs/*.log",
     "dev:all:logs:errors": "tail -f logs/*.log | grep -E '(ERROR|error|Error|failed|Failed|ECONNREFUSED|EADDRINUSE)'",
-    "d:api:build": "pnpm check:core && cd apps/api && node prepare-docker-build.js && docker build --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/api:latest .",
+    "d:api:build": "pnpm build:prod && cd apps/api && node prepare-docker-build.js && docker build --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/api:latest .",
     "d:api:build:nocache": "pnpm check:core && cd apps/api && node prepare-docker-build.js && docker build --no-cache --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/api:latest .",
     "d:api:push": "docker push emprops/api:latest",
     "d:api:build:push": "pnpm d:api:build && pnpm d:api:push",
@@ -71,7 +71,7 @@
     "check:core": "./scripts/check-and-rebuild-core.sh",
     "d:database:build": "pnpm --filter @emp/database build",
     "d:monitor:build": "pnpm --filter monitor build",
-    "d:webhook:build": "pnpm check:core && cd apps/webhook-service && node prepare-docker-build.js && docker build --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/webhook-service:latest .",
+    "d:webhook:build": "pnpm build:prod && cd apps/webhook-service && node prepare-docker-build.js && docker build --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/webhook-service:latest .",
     "d:webhook:build:nocache": "pnpm check:core && cd apps/webhook-service && node prepare-docker-build.js && docker build --no-cache --platform linux/amd64 --build-arg BUILD_DATE=$(date -u +%Y-%m-%dT%H:%M:%SZ) -t emprops/webhook-service:latest .",
     "d:webhook:push": "docker push emprops/webhook-service:latest",
     "d:webhook:build:push": "pnpm d:webhook:build && pnpm d:webhook:push",
