--- a/apps/monitor/package.json
+++ b/apps/monitor/package.json
@@ -7,6 +7,7 @@
     "dev": "mkdir -p ../../logs && (echo '   - Logs:         pnpm logs:monitor' && echo '   - All Logs:     pnpm logs:all' && echo && next dev -p 3333) 2>&1 | tee ../../logs/monitor.log",
     "prebuild": "printf 'NODE_ENV=production\\nDATABASE_URL=postgresql://build:build@localhost:5432/build\\nREDIS_URL=redis://localhost:6379\\nHUB_REDIS_URL=redis://localhost:6379\\n' > .env.local",
     "build": "cd ../../packages/database && pnpm prisma generate && cd ../../apps/monitor && next build",
+    "postinstall": "cd ../../packages/database && pnpm prisma generate",
     "start": "next start -p 3333",
     "lint": "next lint",
     "test": "vitest",
