test and env config

--- a/config/environments/components/api.env
+++ b/config/environments/components/api.env
@@ -16,12 +16,20 @@ NGROK_AUTH_TOKEN=${SECRET_NGROK_AUTH_TOKEN}
 NGROK_API_KEY=${SECRET_NGROK_API_KEY}
 OTEL_SERVICE_NAME=emp-job-queue-api
 
-[local]
+[localdev]
 HOST=0.0.0.0
 PORT=3331
 URL=http://0.0.0.0:3331
 CORS_ORIGIN=http://localhost:3333
 NODE_ENV=development
+FULL_URL=http://0.0.0.0:3331
+
+[localtest]
+HOST=0.0.0.0
+PORT=3331
+URL=http://0.0.0.0:3331
+CORS_ORIGIN=http://localhost:3333
+NODE_ENV=test
 FULL_URL=http://0.0.0.0:3331
 
 [production]
