--- a/config/environments/components/comfyui.env
+++ b/config/environments/components/comfyui.env
@@ -19,5 +19,11 @@ REMOTE_TIMEOUT_SECONDS=15
 REMOTE_RESOURCE_BINDING=shared
 REMOTE_SECURE=false
 
-[local]
+[localdev]
 REMOTE_SECURE=false
+
+[localtest]
+COMPONENTS=false
+
+[remotedev]
+COMPONENTS=txt2img-flux
