--- a/config/environments/components/machine.env
+++ b/config/environments/components/machine.env
@@ -5,6 +5,7 @@ HEALTH_PORT=9090
 # Port offset for multiple local machines - set MACHINE_INSTANCE=0,1,2,etc
 INSTANCE=0
 ENV_ENCRYPTION_KEY=${ENV_ENCRYPT_KEY}
+EMP_ENV_DECRYPT_KEY=${ENV_ENCRYPT_KEY}
 
 
 [sim]
@@ -18,7 +19,12 @@ GPU_MODE=mock
 LOG_LEVEL=debug
 DISABLE_ENV_ENCRYPTION=true
 
-[remote-dev]
+[localtest]
+GPU_MODE=mock
+LOG_LEVEL=debug
+DISABLE_ENV_ENCRYPTION=true
+
+[remotedev]
 EXPOSED_PORTS=9090:9090
 GPU_MODE=actual
 LOG_LEVEL=debug
@@ -29,3 +35,5 @@ EXPOSED_PORTS=9090:9090
 GPU_MODE=actual
 LOG_LEVEL=info
 DISABLE_ENV_ENCRYPTION=false
+
+
