--- a/config/environments/components/ollama.env
+++ b/config/environments/components/ollama.env
@@ -16,9 +16,13 @@ REQUEST_TIMEOUT_MS=300000
 INSTALL_TIMEOUT=600
 MODEL_DOWNLOAD_TIMEOUT=1800
 
-[local]
+[localdev]
 DEFAULT_MODEL=qwen3:0.6b
 DEFAULT_MODELS=tinyllama:1.1b,qwen3:0.6b
+
+[localtest]
+DEFAULT_MODEL=
+DEFAULT_MODELS=
 
 [production]
 DEFAULT_MODEL=qwen3:8b
