--- a/config/environments/components/redis.env
+++ b/config/environments/components/redis.env
@@ -9,11 +9,15 @@ MAX_CONNECTIONS=200
 URL=redis://host.docker.internal:6379
 MAX_CONNECTIONS=10
 
+[localtest]
+URL=redis://localhost:6379
+MAX_CONNECTIONS=10
+
 [production]
 URL=redis://default:${PRODUCTION_REDIS_PASSWORD}@ballast.proxy.rlwy.net:30645
 
-[local-dev]
+[localdev]
 URL=redis://default:${PRODUCTION_REDIS_PASSWORD}@ballast.proxy.rlwy.net:30645
 
-[remote-dev]
+[remotedev]
 URL=${NGROK_REDIS_URL}
