chore: session work - telemetry config, redis functions, and test updates
- Update telemetry-collector config interface with OTLP endpoints
- Enhance Redis function tests and findMatchingJob implementation
- Remove obsolete end-to-end-pipeline test (replaced by proper tests)
- Update API/webhook package dependencies
- Add turbo config for test commands
- Remove old SQL migration file
- Update environment configs for local-dev profile

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,10 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "test:e2e": "vitest run src/__tests__/*.e2e.test.ts",
+    "test:e2e:ui": "vitest --ui src/__tests__/*.e2e.test.ts",
+    "test:e2e:telemetry": "vitest run src/__tests__/telemetry-pipeline.e2e.test.ts src/__tests__/job-telemetry.e2e.test.ts",
+    "test:e2e:telemetry:ui": "vitest --ui src/__tests__/telemetry-pipeline.e2e.test.ts src/__tests__/job-telemetry.e2e.test.ts",
     "lint": "eslint 'src/**/*.ts' --ignore-pattern '**/*.test.ts'",
     "lint:check": "eslint 'src/**/*.ts' --ignore-pattern '**/*.test.ts' --max-warnings 50",
     "lint:fix": "eslint 'src/**/*.ts' --ignore-pattern '**/*.test.ts' --fix",
