--- a/config/environments/components/api.env
+++ b/config/environments/components/api.env
@@ -33,6 +33,7 @@ NODE_ENV=test
 FULL_URL=http://0.0.0.0:3331
 
 [production]
+CURRENT_ENV=production
 HOST=qredapi.emerge.pizza
 PORT=3331
 URL=qredapi.emerge.pizza
