--- a/package.json
+++ b/package.json
@@ -14,6 +14,34 @@
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
+    "test:api": "turbo run test --filter=api",
+    "test:api:ui": "turbo run test:ui --filter=api",
+    "test:api:watch": "turbo run test:watch --filter=api",
+    "test:api:coverage": "turbo run test:coverage --filter=api",
+    "test:api:e2e": "turbo run test:e2e --filter=api",
+    "test:api:e2e:ui": "turbo run test:e2e:ui --filter=api",
+    "test:api:e2e:telemetry": "turbo run test:e2e:telemetry --filter=api",
+    "test:api:e2e:telemetry:ui": "turbo run test:e2e:telemetry:ui --filter=api",
+    "test:worker": "turbo run test --filter=worker",
+    "test:worker:ui": "turbo run test:ui --filter=worker",
+    "test:worker:watch": "turbo run test:watch --filter=worker",
+    "test:core": "turbo run test --filter=@emp/core",
+    "test:core:ui": "turbo run test:ui --filter=@emp/core",
+    "test:core:watch": "turbo run test:watch --filter=@emp/core",
+    "test:webhook": "turbo run test --filter=webhook-service",
+    "test:webhook:ui": "turbo run test:ui --filter=webhook-service",
+    "test:webhook:watch": "turbo run test:watch --filter=webhook-service",
+    "test:webhook:e2e": "turbo run test:e2e --filter=webhook-service",
+    "test:webhook:e2e:ui": "turbo run test:e2e:ui --filter=webhook-service",
+    "test:webhook:e2e:telemetry": "turbo run test:e2e:telemetry --filter=webhook-service",
+    "test:webhook:e2e:telemetry:ui": "turbo run test:e2e:telemetry:ui --filter=webhook-service",
+    "test:telemetry": "turbo run test --filter=telemetry-collector",
+    "test:telemetry:integration": "turbo run test:integration --filter=telemetry-collector",
+    "test:telemetry:ui": "turbo run test:ui --filter=telemetry-collector",
+    "test:monitor": "turbo run test --filter=monitor",
+    "test:monitor:ui": "turbo run test:ui --filter=monitor",
+    "test:machine": "turbo run test --filter=@emp/machine",
+    "test:machine:ui": "turbo run test:ui --filter=@emp/machine",
     "clean": "turbo run clean && rm -rf node_modules",
     "install:clean": "rm -rf node_modules pnpm-lock.yaml && pnpm install",
     "env:build": "node scripts/env/build-env.js",
@@ -131,8 +159,6 @@
     "dev:jresolve": "cd services/job-evaluator && tsx --env-file=.env.secret.local-dev --env-file=.env.local-dev src/resolver.ts",
     "test:infrastructure": "./scripts/test-infrastructure.sh",
     "test:infrastructure:ui": "cd apps/webhook-service && pnpm test:ui",
-    "test:telemetry:integration": "cd apps/telemetry-collector && pnpm test:integration",
-    "test:telemetry:pipeline": "pnpm test:telemetry:integration",
     "prepare": "husky"
   },
   "devDependencies": {
