config/environments/components/database.env
added db interface back

--- a/config/environments/components/database.env
+++ b/config/environments/components/database.env
@@ -4,13 +4,19 @@ NAMESPACE=DATABASE
 [default]
 
 [development]
-URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-dev?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emp-job-queue-monitor
-SHADOW_URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-dev-shadow?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emprops-open-api-dev-prisma-shadow
+URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-dev?sslmode=require&connection_limit=1000&pool_timeout=30
+DIRECT_URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-dev?sslmode=require
 PRISMA_TELEMETRY_DISABLED=TRUE
 NODE_ENV=DEVELOPMENT
 
+[staging]
+URL=${DATABASE_BASE_URL}/emprops-open-api-staging?sslmode=require&connection_limit=1000&pool_timeout=30
+DIRECT_URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-staging?sslmode=require
+PRISMA_TELEMETRY_DISABLED=FALSE
+NODE_ENV=STAGING
+
 [production]
-URL=${DATABASE_BASE_URL}/emprops-open-api?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emp-job-queue-monitor
-SHADOW_URL=${DATABASE_BASE_URL_DEV}/emprops-open-api-shadow?sslmode=require&connection_limit=1000&pool_timeout=30&application_name=emprops-open-api-prisma-shadow
+URL=${DATABASE_BASE_URL}/emprops-open-api?sslmode=require&connection_limit=1000&pool_timeout=30
+DIRECT_URL=${DATABASE_BASE_URL_DEV}/emprops-open-api?sslmode=require
 PRISMA_TELEMETRY_DISABLED=FALSE
 NODE_ENV=PRODUCTION
